<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_diagonal_header"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="?attr/colorErrorContainer">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setelan"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:text="@string/Tema"
        android:textColor="?attr/colorOnSurface"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Theme Selection -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="1dp"
        android:orientation="vertical"
        android:padding="15dp">

        <RadioGroup
            android:id="@+id/rgThemeSelector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rbLightTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tema_terang"
                android:textColor="?attr/colorOnSurface"
                android:textSize="14sp"
                android:textStyle="normal"
                android:padding="8dp"
                android:checked="true" />

            <RadioButton
                android:id="@+id/rbDarkTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tema_gelap"
                android:textColor="?attr/colorOnSurface"
                android:textSize="14sp"
                android:padding="8dp"
                android:textStyle="normal"
                android:checked="false" />

        </RadioGroup>

    </LinearLayout>
</LinearLayout>